--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,8 @@ dependencies:
   open_street_map_search_and_pick: ^0.1.0
   url_launcher: ^6.2.2
   flutter_easyloading: ^3.0.5
-
+  curved_navigation_bar: ^1.0.6
+  dropdown_button2: ^2.3.9
 
 
 
@@ -80,9 +81,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
