--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   curved_navigation_bar: ^1.0.6
   dropdown_button2: ^2.3.9
+  lottie: ^3.1.3
 
 
 
@@ -84,6 +85,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/animation/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
