--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,20 +42,18 @@ dependencies:
   get: ^4.6.6
   get_it: ^7.6.4
   shared_preferences: ^2.2.2
-  flutter_timer_countdown: ^1.0.7
   either_dart: ^1.0.0
   pretty_dio_logger: ^1.3.1
-  top_snackbar_flutter: ^3.1.0
   fluttertoast: ^8.2.4
-  geolocator: ^10.1.0
-  shimmer: ^3.0.0
-  cached_network_image: ^3.3.0
-  open_street_map_search_and_pick: ^0.1.0
-  url_launcher: ^6.2.2
   flutter_easyloading: ^3.0.5
   curved_navigation_bar: ^1.0.6
+  permission_handler: ^11.3.1
   dropdown_button2: ^2.3.9
   lottie: ^3.1.3
+  url_launcher: ^6.3.1
+  flutter_phone_direct_caller: ^2.1.1
+
+
 
 
 
