--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   flutter_screenutil: ^5.9.0
-  flutter_launcher_icons: ^0.13.1
   flutter_svg: ^2.0.9
   get: ^4.6.6
   get_it: ^7.6.4
@@ -52,7 +51,7 @@ dependencies:
   lottie: ^3.1.3
   url_launcher: ^6.3.1
   flutter_phone_direct_caller: ^2.1.1
-
+  device_preview: ^1.2.0
 
 
 
@@ -67,11 +66,20 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.14.1
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.jpeg"
+  adaptive_icon_foreground: "assets/images/logo.jpeg"
+  adaptive_icon_background: "#FFFFFF"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 flutter:
 
   # The following line ensures that the Material Icons font is
