--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
     </queries>
 
     <application
-        android:label="absence app"
+        android:label="مدرسة السمائيين"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
