--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_phone_direct_caller: ^2.1.1
   device_preview: ^1.2.0
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.11
 
 
 
@@ -67,6 +70,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_launcher_icons: ^0.14.1
+  build_runner: ^2.4.0
+  hive_generator: ^2.0.0
 
 
 # For information on the generic Dart part of this file, see the
