--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,8 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
-
+  font_awesome_flutter: ^10.8.0
+  top_snackbar_flutter: ^3.1.0
 
 
 
@@ -72,6 +73,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.1
   build_runner: ^2.4.0
   hive_generator: ^2.0.0
+
 
 
 # For information on the generic Dart part of this file, see the
