--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   top_snackbar_flutter: ^3.1.0
   flutter_native_splash: ^2.4.1
+  connectivity_plus: ^6.1.0
 
 
 
