--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   top_snackbar_flutter: ^3.1.0
   flutter_native_splash: ^2.4.1
   connectivity_plus: ^6.1.0
+  workmanager: ^0.5.2
+  flutter_local_notifications: ^18.0.1
+
 
 
 
