--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,8 @@ dependencies:
   connectivity_plus: ^6.1.0
   workmanager: ^0.5.2
   flutter_local_notifications: ^18.0.1
-
-
+  firebase_core: ^3.8.1
+  firebase_messaging: ^15.1.6
 
 
 dev_dependencies:
