--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,9 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   firebase_core: ^3.8.1
   firebase_messaging: ^15.1.6
+  googleapis: ^13.2.0
+  googleapis_auth: ^1.6.0
+  http: ^1.2.2
 
 
 dev_dependencies:
