--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   device_preview: ^1.2.0
   hive: ^2.0.4
   hive_flutter: ^1.1.0
+  pinput: ^3.0.1
   path_provider: ^2.0.11
   font_awesome_flutter: ^10.8.0
   top_snackbar_flutter: ^3.1.0
